2000-07-27  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c (eti_cursor_change): Grab focus properly.

	* e-table-item.c, e-table-click-to-add.c: Fixed ETableClickToAdd
	to handle carriage return.  This still doesn't quite work right.

2000-07-27  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-click-to-add.c: Clear the selection model when
	activating.

	* e-table-item.c: Fixed a bunch of model column vs. view column
	issues.

	* e-table-selection-model.c: Set the cursor to -1, -1 and emi a
	"cursor_changed" signal.

2000-07-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-click-to-add.c: Fixed a reference.

	* e-table-selection-model.c, e-table-selection-model.h: Added a
	clear function.

	* e-table.c, e-table.h: Made going from click to add to the main
	table and back work better.

2000-07-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-click-to-add.c, e-table-click-to-add.h: Added an
	ETableSelectionModel so this won't crash.

2000-07-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c: Fixed the model/view row confusion.

	* e-table-selection-model.c: Changed one expression to use a
	#define properly.

2000-07-26  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c, e-table-group-container.h,
	e-table-group-leaf.c, e-table-group-leaf.h: Added "table_selection_model"
	argument.  Removed foreach function and selection notification.

	* e-table-group.c, e-table-group.h: Removed foreach function and
	selection notification.
	
	* e-table-header.c: Fixed header width calculation to include the
	last column.

	* e-table-item.c, e-table-item.h: Fixed this to use the new
	selection model.

	* e-table-scrolled.c, e-table-scrolled.h: Removed selection
	notification.

	* e-table-selection-model.c, e-table-selection-model.h: Finished
	notification signals and fixed a bunch of bit manipulations.
	Implemented do_something method.
