@@ -47,7 +47,7 @@ model_changed(ETableModel *etm, ETableSelectionModel *etsm)
 	e_table_selection_model_clear(etsm);
 }
 
-#if 1
+#if 0
 static void
 model_row_inserted(ETableModel *etm, int row, ETableSelectionModel *etsm)
 {
@@ -56,7 +56,7 @@ model_row_inserted(ETableModel *etm, int row, ETableSelectionModel *etsm)
 	if(etsm->row_count >= 0) {
 		/* Add another word if needed. */
 		if ((etsm->row_count & 0x1f) == 0) {
-			etsm->selection = g_realloc(etsm->selection, (etsm->row_count >> 5) + 1);
+			etsm->selection = g_renew(etsm->selection, gint, (etsm->row_count >> 5) + 1);
 			etsm->selection[etsm->row_count >> 5] = 0;
 		}
 
@@ -101,7 +101,7 @@ model_row_deleted(ETableModel *etm, int row, ETableSelectionModel *etsm)
 		etsm->row_count --;
 		/* Remove the last word if not needed. */
 		if ((etsm->row_count & 0x1f) == 0) {
-			etsm->selection = g_realloc(etsm->selection, etsm->row_count >> 5);
+			etsm->selection = g_renew(etsm->selection, gint, etsm->row_count >> 5);
 		}
 	}
 }
